add sorting news by date of publish

--- a/web/WEB-INF/pages/rightBar.html
+++ b/web/WEB-INF/pages/rightBar.html
@@ -1,4 +1,4 @@
-<h3>Technologies used in this page:</h3>
+<h3>Technologies used in this project:</h3>
 <img src="/images/java.jpg" alt="JAVA"/>
 <img src="/images/jsp.png" alt="JSP"/>
 <img src="/images/html.jpg" alt="HTML"/>
