change thread.sleep to Timer, replace add/remove images, refactor rest.js

--- a/src/main/webapp/WEB-INF/pages/rightBar.html
+++ b/src/main/webapp/WEB-INF/pages/rightBar.html
@@ -6,3 +6,8 @@
 <img src="/images/servlets.jpg" alt="JAVA SERVLETS"/>
 <img src="/images/js.png" alt="JAVASCRIPT"/>
 <img src="/images/mvc.png" alt="MVC"/>
+<img src="/images/jstl.gif" alt="JSTL"/>
+<img src="/images/maven.png" alt="MAVEN"/>
+<img src="/images/rome.png" alt="ROME"/>
+<img src="/images/tomcat.jpg" alt="TOMCAT"/>
+<img src="/images/git.jpg" alt="GIT"/>
